# Minesweeper

./: .clang-format  CMakeLists.txt
include/: cell.h  choose.h  column.h  columns.h  combos.h  computer.h  concealed.h  filter.h  human.h  mined.h  mines.h  neighbors.h  play.h  position.h  preparation.h  print.h  row.h  rows.h  severity.h  threat.h
include/console/: ask.h  getline.h  print.h
include/player/: play.h  player.h
src/: board.cpp  cells.cpp  choose.cpp  column.cpp  columns.cpp  combos.cpp  computer.cpp  filter.cpp  getline.cpp  human.cpp  main.cpp  mined.cpp  neighbors.cpp  play.cpp  position.cpp  preparation.cpp  print.cpp  reveal.cpp  row.cpp  rows.cpp  severity.cpp
src/console/: getline.cpp  print.cpp
src/move/: mark.cpp  parse.cpp  reveal.cpp
src/player/: choose.cpp  computer.cpp  human.cpp  play.cpp
